languages/ocl/parser/OCLParser.py
# Generated from OCL.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class OCLParser ( Parser ):

    grammarFileName = "OCL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'context'", "'inv'", "':'", "'init:'", 
                     "'derive:'", "'Sequence'", "'('", "')'", "'Set'", "'Bag'", 
                     "'OrderedSet'", "'Ref'", "'Map'", "','", "'Function'", 
                     "'if'", "'then'", "'else'", "'endif'", "'let'", "'in'", 
                     "'='", "'.'", "'['", "']'", "'and'", "'&'", "'or'", 
                     "'xor'", "'=>'", "'implies'", "'<'", "'>'", "'>='", 
                     "'<='", "'/='", "'<>'", "'/:'", "'<:'", "'+'", "'-'", 
                     "'..'", "'|->'", "'*'", "'/'", "'mod'", "'div'", "'not'", 
                     "'?'", "'!'", "'allInstances'", "'oclType'", "'oclIsUndefined'", 
                     "'oclIsInvalid'", "'oclIsNew'", "'oclAsSet'", "'oclIsTypeOf'", 
                     "'oclIsKindOf'", "'oclAsType'", "'size'", "'max'", 
                     "'min'", "'indexOf'", "'at'", "'->'", "'isEmpty'", 
                     "'notEmpty'", "'asSet'", "'asBag'", "'asOrderedSet'", 
                     "'asSequence'", "'any'", "'first'", "'last'", "'reverse'", 
                     "'floor'", "'round'", "'abs'", "'sum'", "'characters'", 
                     "'toInteger'", "'toReal'", "'toBoolean'", "'toUpperCase'", 
                     "'toLowerCase'", "'union'", "'intersection'", "'includes'", 
                     "'excludes'", "'including'", "'excluding'", "'includesAll'", 
                     "'symmetricDifference'", "'excludesAll'", "'prepend'", 
                     "'append'", "'count'", "'equalsIgnoreCase'", "'collect'", 
                     "'|'", "'select'", "'reject'", "'forAll'", "'exists'", 
                     "'one'", "'closure'", "'sortedBy'", "'isUnique'", "'insertAt'", 
                     "'iterate'", "';'", "'OrderedSet{'", "'}'", "'Bag{'", 
                     "'Set{'", "'Sequence{'", "'Map{'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'null'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "BOOLEAN_LITERAL", "FLOAT_LITERAL", 
                      "STRING1_LITERAL", "STRING2_LITERAL", "ENUMERATION_LITERAL", 
                      "NULL_LITERAL", "MULTILINE_COMMENT", "LINE_COMMENT", 
                      "NEWLINE", "INT", "ID", "WS" ]

    RULE_multipleContextSpecifications = 0
    RULE_contextSpecification = 1
    RULE_singleInvariant = 2
    RULE_singleDerivedAttribute = 3
    RULE_type = 4
    RULE_expressionList = 5
    RULE_expression = 6
    RULE_conditionalExpression = 7
    RULE_letExpression = 8
    RULE_letBinding = 9
    RULE_basicExpression = 10
    RULE_logicalExpression = 11
    RULE_equalityExpression = 12
    RULE_additiveExpression = 13
    RULE_multiplicativeExpression = 14
    RULE_unaryExpression = 15
    RULE_navigationExpression = 16
    RULE_primaryFactor = 17
    RULE_postfixSuffix = 18
    RULE_identOptType = 19
    RULE_identOptTypeList = 20
    RULE_setExpression = 21
    RULE_identifier = 22
    RULE_qualified_name = 23

    ruleNames =  [ "multipleContextSpecifications", "contextSpecification", 
                   "singleInvariant", "singleDerivedAttribute", "type", 
                   "expressionList", "expression", "conditionalExpression", 
                   "letExpression", "letBinding", "basicExpression", "logicalExpression", 
                   "equalityExpression", "additiveExpression", "multiplicativeExpression", 
                   "unaryExpression", "navigationExpression", "primaryFactor", 
                   "postfixSuffix", "identOptType", "identOptTypeList", 
                   "setExpression", "identifier", "qualified_name" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    T__67=68
    T__68=69
    T__69=70
    T__70=71
    T__71=72
    T__72=73
    T__73=74
    T__74=75
    T__75=76
    T__76=77
    T__77=78
    T__78=79
    T__79=80
    T__80=81
    T__81=82
    T__82=83
    T__83=84
    T__84=85
    T__85=86
    T__86=87
    T__87=88
    T__88=89
    T__89=90
    T__90=91
    T__91=92
    T__92=93
    T__93=94
    T__94=95
    T__95=96
    T__96=97
    T__97=98
    T__98=99
    T__99=100
    T__100=101
    T__101=102
    T__102=103
    T__103=104
    T__104=105
    T__105=106
    T__106=107
    T__107=108
    T__108=109
    T__109=110
    T__110=111
    T__111=112
    T__112=113
    T__113=114
    T__114=115
    T__115=116
    T__116=117
    BOOLEAN_LITERAL=118
    FLOAT_LITERAL=119
    STRING1_LITERAL=120
    STRING2_LITERAL=121
    ENUMERATION_LITERAL=122
    NULL_LITERAL=123
    MULTILINE_COMMENT=124
    LINE_COMMENT=125
    NEWLINE=126
    INT=127
    ID=128
    WS=129

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class MultipleContextSpecificationsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(OCLParser.EOF, 0)

        def singleInvariant(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OCLParser.SingleInvariantContext)
            else:
                return self.getTypedRuleContext(OCLParser.SingleInvariantContext,i)


        def singleDerivedAttribute(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OCLParser.SingleDerivedAttributeContext)
            else:
                return self.getTypedRuleContext(OCLParser.SingleDerivedAttributeContext,i)


        def getRuleIndex(self):
            return OCLParser.RULE_multipleContextSpecifications

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMultipleContextSpecifications" ):
                return visitor.visitMultipleContextSpecifications(self)
            else:
                return visitor.visitChildren(self)




    def multipleContextSpecifications(self):

        localctx = OCLParser.MultipleContextSpecificationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_multipleContextSpecifications)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 50
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 48
                    self.singleInvariant()
                    pass

                elif la_ == 2:
                    self.state = 49
                    self.singleDerivedAttribute()
                    pass


                self.state = 52 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==1):
                    break

            self.state = 54
            self.match(OCLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ContextSpecificationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(OCLParser.EOF, 0)

        def singleInvariant(self):
            return self.getTypedRuleContext(OCLParser.SingleInvariantContext,0)


        def singleDerivedAttribute(self):
            return self.getTypedRuleContext(OCLParser.SingleDerivedAttributeContext,0)


        def getRuleIndex(self):
            return OCLParser.RULE_contextSpecification

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitContextSpecification" ):
                return visitor.visitContextSpecification(self)
            else:
                return visitor.visitChildren(self)




    def contextSpecification(self):

        localctx = OCLParser.ContextSpecificationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_contextSpecification)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 56
                self.singleInvariant()
                pass

            elif la_ == 2:
                self.state = 57
                self.singleDerivedAttribute()
                pass


            self.state = 60
            self.match(OCLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SingleInvariantContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(OCLParser.ID)
            else:
                return self.getToken(OCLParser.ID, i)

        def expression(self):
            return self.getTypedRuleContext(OCLParser.ExpressionContext,0)


        def getRuleIndex(self):
            return OCLParser.RULE_singleInvariant

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSingleInvariant" ):
                return visitor.visitSingleInvariant(self)
            else:
                return visitor.visitChildren(self)




    def singleInvariant(self):

        localctx = OCLParser.SingleInvariantContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_singleInvariant)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(OCLParser.T__0)
            self.state = 63
            self.match(OCLParser.ID)
            self.state = 64
            self.match(OCLParser.T__1)
            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==128:
                self.state = 65
                self.match(OCLParser.ID)


            self.state = 68
            self.match(OCLParser.T__2)
            self.state = 69
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SingleDerivedAttributeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def qualified_name(self):
            return self.getTypedRuleContext(OCLParser.Qualified_nameContext,0)


        def type_(self):
            return self.getTypedRuleContext(OCLParser.TypeContext,0)


        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OCLParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(OCLParser.ExpressionContext,i)


        def getRuleIndex(self):
            return OCLParser.RULE_singleDerivedAttribute

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSingleDerivedAttribute" ):
                return visitor.visitSingleDerivedAttribute(self)
            else:
                return visitor.visitChildren(self)




    def singleDerivedAttribute(self):

        localctx = OCLParser.SingleDerivedAttributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_singleDerivedAttribute)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(OCLParser.T__0)
            self.state = 72
            self.qualified_name()
            self.state = 73
            self.match(OCLParser.T__2)
            self.state = 74
            self.type_()
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 75
                self.match(OCLParser.T__3)
                self.state = 76
                self.expression()


            self.state = 79
            self.match(OCLParser.T__4)
            self.state = 80
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OCLParser.TypeContext)
            else:
                return self.getTypedRuleContext(OCLParser.TypeContext,i)


        def identifier(self):
            return self.getTypedRuleContext(OCLParser.IdentifierContext,0)


        def getRuleIndex(self):
            return OCLParser.RULE_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = OCLParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_type)
        try:
            self.state = 122
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 82
                self.match(OCLParser.T__5)
                self.state = 83
                self.match(OCLParser.T__6)
                self.state = 84
                self.type_()
                self.state = 85
                self.match(OCLParser.T__7)
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 87
                self.match(OCLParser.T__8)
                self.state = 88
                self.match(OCLParser.T__6)
                self.state = 89
                self.type_()
                self.state = 90
                self.match(OCLParser.T__7)
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 3)
                self.state = 92
                self.match(OCLParser.T__9)
                self.state = 93
                self.match(OCLParser.T__6)
                self.state = 94
                self.type_()
                self.state = 95
                self.match(OCLParser.T__7)
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 4)
                self.state = 97
                self.match(OCLParser.T__10)
                self.state = 98
                self.match(OCLParser.T__6)
                self.state = 99
                self.type_()
                self.state = 100
                self.match(OCLParser.T__7)
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 5)
                self.state = 102
                self.match(OCLParser.T__11)
                self.state = 103
                self.match(OCLParser.T__6)
                self.state = 104
                self.type_()
                self.state = 105
                self.match(OCLParser.T__7)
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 6)
                self.state = 107
                self.match(OCLParser.T__12)
                self.state = 108
                self.match(OCLParser.T__6)
                self.state = 109
                self.type_()
                self.state = 110
                self.match(OCLParser.T__13)
                self.state = 111
                self.type_()
                self.state = 112
                self.match(OCLParser.T__7)
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 7)
                self.state = 114
                self.match(OCLParser.T__14)
                self.state = 115
                self.match(OCLParser.T__6)
                self.state = 116
                self.type_()
                self.state = 117
                self.match(OCLParser.T__13)
                self.state = 118
                self.type_()
                self.state = 119
                self.match(OCLParser.T__7)
                pass
            elif token in [128]:
                self.enterOuterAlt(localctx, 8)
                self.state = 121
                self.identifier()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OCLParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(OCLParser.ExpressionContext,i)


        def getRuleIndex(self):
            return OCLParser.RULE_expressionList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressionList" ):
                return visitor.visitExpressionList(self)
            else:
                return visitor.visitChildren(self)




    def expressionList(self):

        localctx = OCLParser.ExpressionListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_expressionList)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 124
                    self.expression()
                    self.state = 125
                    self.match(OCLParser.T__13) 
                self.state = 131
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

            self.state = 132
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logicalExpression(self):
            return self.getTypedRuleContext(OCLParser.LogicalExpressionContext,0)


        def conditionalExpression(self):
            return self.getTypedRuleContext(OCLParser.ConditionalExpressionContext,0)


        def letExpression(self):
            return self.getTypedRuleContext(OCLParser.LetExpressionContext,0)


        def getRuleIndex(self):
            return OCLParser.RULE_expression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = OCLParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_expression)
        try:
            self.state = 137
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7, 40, 41, 48, 49, 50, 112, 114, 115, 116, 117, 118, 119, 120, 121, 122, 123, 127, 128]:
                self.enterOuterAlt(localctx, 1)
                self.state = 134
                self.logicalExpression()
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 2)
                self.state = 135
                self.conditionalExpression()
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 3)
                self.state = 136
                self.letExpression()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionalExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OCLParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(OCLParser.ExpressionContext,i)


        def getRuleIndex(self):
            return OCLParser.RULE_conditionalExpression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConditionalExpression" ):
                return visitor.visitConditionalExpression(self)
            else:
                return visitor.visitChildren(self)




    def conditionalExpression(self):

        localctx = OCLParser.ConditionalExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_conditionalExpression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(OCLParser.T__15)
            self.state = 140
            self.expression()
            self.state = 141
            self.match(OCLParser.T__16)
            self.state = 142
            self.expression()
            self.state = 143
            self.match(OCLParser.T__17)
            self.state = 144
            self.expression()
            self.state = 145
            self.match(OCLParser.T__18)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LetExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def letBinding(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OCLParser.LetBindingContext)
            else:
                return self.getTypedRuleContext(OCLParser.LetBindingContext,i)


        def expression(self):
            return self.getTypedRuleContext(OCLParser.ExpressionContext,0)


        def getRuleIndex(self):
            return OCLParser.RULE_letExpression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLetExpression" ):
                return visitor.visitLetExpression(self)
            else:
                return visitor.visitChildren(self)




    def letExpression(self):
